Update readme and initial HTML

--- a/index.html
+++ b/index.html
@@ -20,47 +20,42 @@
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
+          
             <h2>
-                Welcome to Alchemy Bootstrap!
+                Welcome to Chrome City!<br/>
+                As a leading city planner, we need your help designing Chrome City.
             </h2>
-
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-            <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur
-                voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos
-                praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores
-                provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente
-                excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil
-                inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi
-                reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit
-                possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis
-                ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa
-                praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis
-                exercitationem?
-            </p>
-
+            <div class='cityAspect' id='climate'>
+                <select id='climate-dropdown'>
+                    <option value='beach'>Beach</option>
+                    <option value='desert'>Desert</option>
+                    <option value='forest'>Forest</option>
+                </select>
+                <div class='image' id='climate-image'></div>
+            </div>
+            <div class='cityAspect' id='arch'>
+                <select id='arch-dropdown'>
+                    <option value='modern'>Modern</option>
+                    <option value='gothic'>Gothic</option>
+                    <option value='artdeco'>Art Deco</option>
+                </select>
+                <div class='image' id='arch-image'></div>
+            </div>
+            <div class='cityAspect' id='mayor'>
+                <select id='mayor-dropdown'>
+                    <option value='leslie'>Leslie</option>
+                    <option value='april'>April</option>
+                    <option value='chris'>Chris</option>
+                </select>
+                <div class='image' id='mayor-image'></div>
+            </div>
+        </section>
+        <section class='slogan'>
+            <label>
+                What should our slogan be?
+                <input id='slogan-input' />
+                <button id='slogan-button'>Add</button>
+            </label>
         </section>
     </main>
     <footer>
