Add createCountString and tests and import functions + grab DOM elements

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <option value='desert'>Desert</option>
                     <option value='forest'>Forest</option>
                 </select>
-                <div class='image' id='climate-image'></div>
+                <img id='climate-image' src="./assets/beach.jpg"></img>
             </div>
             
             <div class='cityAspect' id='arch'>
@@ -43,7 +43,7 @@
                     <option value='gothic'>Gothic</option>
                     <option value='artdeco'>Art Deco</option>
                 </select>
-                <div class='image' id='arch-image'></div>
+                <img id='arch-image' src="./assets/modern.jpg"></img>
             </div>
             <div class='cityAspect' id='mayor'>
                 <label class='labels'>Mayor</label>
@@ -52,10 +52,10 @@
                     <option value='april'>April</option>
                     <option value='ron'>Ron</option>
                 </select>
-                <div class='image' id='mayor-image'></div>
+                <img id='mayor-image' src="./assets/leslie.jpg"></img>
             </div>
         </section>
-        <section class='slogan'>
+        <section class='slogan' id='slogan-location'>
             <label>
                 What should our slogan be?
                 <input id='slogan-input' />
