functioning climate event listener

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 </select>
                 <img id='mayor-image' src="./assets/leslie.jpg"></img>
             </div>
+            <p id='results'></p>
         </section>
         <section class='slogan' id='slogan-location'>
             <label>
