displayStats function and slogan event listener + displaySlogans function

--- a/index.html
+++ b/index.html
@@ -54,13 +54,16 @@
                 </select>
                 <img id='mayor-image' src="./assets/leslie.jpg"></img>
             </div>
-            <p id='results'></p>
+            <p id='resultsClimate'></p>
+            <p id='resultsArch'></p>
+            <p id='resultsMayor'></p>
         </section>
-        <section class='slogan' id='slogan-location'>
+        <section class='slogan'>
             <label>
                 What should our slogan be?
                 <input id='slogan-input' />
                 <button id='slogan-button'>Add</button>
+                <div id='slogan-location'></div>
             </label>
         </section>
     </main>
